--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{% static 'style.css'%}">
     </head>
     <body>
+       <div class="container">
         <h1>
            Article
         </h1>
@@ -17,5 +18,6 @@
         <p>{{x.date}}</p>
         <p>{{x.snippet}}</p>
         {%endfor%}
+       </div>
     </body>
 </html> 
