--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,18 @@
-body{
+body {
     background-color: black;
-    color:white
+    color: rgb(167, 35, 35);
 }
-body*{
-    font-family:arial;
+
+* {
+    font-family: arial;
 }
-a,a:hover,a:visited{
-    color:white;
-    text-decoration:none;
-    
+
+a, a:hover, a:visited {
+    color: rgb(34, 115, 117);
+    text-decoration: none;
 }
-h1,h2,h3,h4,h5{
-    font-weight:normal;
-    margin:0;
+
+h1, h2, h3, h4, h5 {
+    font-weight: normal;
+    margin: 0;
 }
