--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -1,24 +1,23 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+{%extends 'base.html'%}
+{%block tittle%}
+articles
+{% endblock %}
 
-    <head>
-        <meta charset="utf-8">
-        <title>django blog</title>
-        <link rel="stylesheet" href="{% static 'style.css'%}">
-    </head>
-    <body>
-        <div class="continer">
-        <h1>
-            Article
-        </h1>
-        <p>this page madeing up with django!</p>
-        <p>iran prudoct</p>
-        {%for x in articles%}
-        <h2><a href="#">{{x.title}}</a></h2>
+{%block content%}
+
+    <h1>Article</h1>
+    <div class="articles">
+        <p>perspolice</p>
+    <p>this page madeing up with django!</p>
+    <p>iran prudoct</p>
+    {%for x in articles%}
+    <div class="article">
+        <h2><a href="{% url 'articles:detail' slug=x.slug%}">{{x.title}}</a></h2>
         <p>{{x.date}}</p>
         <p>{{x.snippet}}</p>
-        {%endfor%}
-        </div>
-    </body>
-</html> 
+        <p class="author">added by {{article.author.username}}</p>
+    </div>
+    {%endfor%}
+    </div>
+
+{%endblock%}
