--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: black;
     color: rgb(167, 35, 35);
+    background-image: url(1.png);
+    background-size: auto;
+    
 }
 
 * {
@@ -15,4 +18,109 @@ a, a:hover, a:visited {
 h1, h2, h3, h4, h5 {
     font-weight: normal;
     margin: 0;
+}
+.wrapper{
+    max-width:960px;
+    margin:0 auto;
+}
+div.wrapper h1{
+    text-align:center;
+    margin:100px auto;
+    font-size:2.4em;
+    
+}
+header{
+    display:grid;
+    grid-template-columns:1fr 1fr;
+    padding:20px 0;
+    
+}
+nav li{
+    display:inline-block;
+    margin-left:20px;
+}
+nav button{
+    background: none;
+    color: aliceblue;
+    cursor: pointer;
+    border: 0;
+    font-size: 1em;
+}
+.articles{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap:30px;
+
+}
+.article{
+    padding: 10px;
+    border: 1px solid #00dba0;
+    position: relative;
+    padding-bottom: 40px;
+}
+.article_details .article{
+    padding:0;
+}
+.article_details .article.img{
+    max-width:100%;
+}
+.article_details .article h2{
+    text-align:center;
+    font-size:2em;
+    
+}
+.article-detail .article p{
+    text-align:center;
+}
+.article .author{
+    padding: 10px;
+    background-color: #00dba0;
+    margin:0;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    color: black;
+}
+.site-form{
+    margin-top: 60px;
+    border:1px solid #00dba0;
+    padding: 20px;
+}
+.site-form input,.site-form textarea{
+    display: block;
+    margin: 20px 0 0 0;
+    padding: 10px;
+}
+a.hilight{
+    border:1px solid #00dba0;
+    padding: 10px;
+    border-radius: 5px;
+    color: #00dba0 ;
+}
+.helptext, .helptext ul{
+    margin: 0 auto 20px;
+    color: #bbb;
+    font-size: 0.9em;
+    display: block;
+}
+.errorlist li{
+    padding: 10px;
+    list-style-type: none;
+    border: 1px solid #ff5722;
+    color: #ff5722;
+    margin: 10px;
+}
+.errorlist{
+    padding: 0px;
+}
+.site-form input[type="submit"]{
+    border: 0;
+    color: #fff;
+    font-size: 1.2em;
+    background: #00dba0;
+    border-radius: 5px;
+    margin: 10px 0;
+}
+.signup-form{
+    font-size: 1.5em;
 }
